--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base{
+  main{
+    max-width:475px;
+    margin:0 auto;
+  }
+}
+
+@layer components {
+  .btn-primary{
+    @apply w-full bg-black h-10 text-white rounded-md disabled:bg-neutral-400 disabled:cursor-not-allowed
+  }
+}
