--- a/app/globals.css
+++ b/app/globals.css
@@ -2,15 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
-  main{
-    max-width:475px;
-    margin:0 auto;
-  }
-}
-
 @layer components {
   .btn-primary{
-    @apply w-full bg-black h-10 text-white rounded-md disabled:bg-neutral-400 disabled:cursor-not-allowed
+    @apply w-full bg-primary h-10 text-white rounded-md disabled:bg-neutral-400 disabled:cursor-not-allowed flex justify-center items-center font-medium
   }
 }
